Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Deal with Lambert2 projections properly since mapbuilder approximations on
  the this kind of projection is pretty raugh.