@@ -20,6 +20,8 @@
 http://www.cps-project.org/sections/projects/cpsgeo_simple_gis_for
 """
 
+import AllowModules
+
 from zLOG import LOG, INFO
 logKey = 'CPSGeo'
 
@@ -103,14 +105,4 @@ def initialize(registrar):
         tools=tools,
         icon='tool.png'
         ).initialize(registrar)
-
-    from AccessControl import allow_module, allow_class
-    # two classes from PCL's geo-referencing package for use in
-    # cps_geolocate.py
-    allow_module('cartography.referencing.srs')
-    allow_module('cartography.referencing.transform.proj4')
-    from cartography.referencing.srs import SpatialReference
-    allow_class(SpatialReference)
-    from cartography.referencing.transform.proj4 import ProjTransform
-    allow_class(ProjTransform)
 
